Add Search Template & created Search Functions

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                 <header>
                     <nav>
                         <ul>
-                            <li><a href = "#"> Recherche simple</a></li>
+                            <li><a href = "{{ path('search')}}"> Recherche simple</a></li>
                             <li><a href = "{{ path('home')}}"> Recherche avancée</a></li>
                             <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo/logo.png') }}" alt="logo">
                             <li><a href = "#"> Groupe de voyage</a></li>
