--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
                     <nav>
                         <ul>
                             <li><a href = "{{ path('search')}}"> Recherche simple</a></li>
-                            <li><a href = "{{ path('home')}}"> Recherche avancée</a></li>
+                            <li><a href = "{{ path('advanced_search')}}"> Recherche avancée</a></li>
                             <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo/logo.png') }}" alt="logo">
                             <li><a href = "#"> Groupe de voyage</a></li>
                             <li><a href = "{{ path('app_register')}}"> S'inscrire</a></li>
