--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -11,7 +11,7 @@
 {% block container %}
 <div class="form-container-search">
     <h1 class="text-center">Recherche simplifiée</h1>
-    <a href="{{ path('home')}}" class="search-redirection d-block text-center mb-0">Faire une recherche filtrée</a>
+    <a href="{{ path('advanced_search')}}" class="search-redirection d-block text-center mb-0">Faire une recherche filtrée</a>
     <p class="text-center">Saisissez le nom d'une ville et cliquez sur son nom afin d'accéder à sa fiche.</p>
         {{ form_start(form) }}
         {{ form_widget(form) }}
