Added City List template

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" href="{{ asset('pictures/favicon.ico') }}" />
-        <title>{% block title %} Dream Travel - {{ pageTitle }}{% endblock %}</title>
+        <title>{% block title %} Dream Travel - Yo {% endblock %}</title>
        
 
 
