Changed navbar if logged or not

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,8 +35,13 @@
                             <li><a href = "{{ path('advanced_search')}}"> Recherche avancée</a></li>
                             <li><a href = "#">  <img  class="logo" src="{{ asset('pictures/logo/logo.png') }}" alt="logo">
                             <li><a href = "#"> Groupe de voyage</a></li>
-                            <li><a href = "{{ path('app_register')}}"> S'inscrire</a></li>
+                            {% if app.user %}
+                            <li><a href = "{{ path('app_logout')}}"> Deconnexion</a></li>
+                            {% else %}
                             <li><a href = "{{ path('app_login')}}"> Se connecter</a></li>
+                            <li><a href = "{{ path('app_register')}}"> S'inscrire</a></li>
+                            {% endif %}
+                            
                         </ul>
                     </nav>
                 </header>
